--- a/Html_and_ CSS_Assignments/Project10/style.css
+++ b/Html_and_ CSS_Assignments/Project10/style.css
@@ -7,13 +7,10 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-html{
-    font-size: 16px;
-}
 body{
     background-color: rgb(236, 240, 240);
-    /* max-width: 1440px;
-    margin: 0 auto; */
+    max-width: 1440px;
+    margin: 0 auto;
 }
 :root{
     --purple:#6663E9;
