--- a/Html_and_ CSS_Assignments/Project8/style.css
+++ b/Html_and_ CSS_Assignments/Project8/style.css
@@ -8,6 +8,7 @@
 body{
     box-sizing: border-box;
     max-width: 1440px;
+    margin: 0 auto;
     font-family: "Montserrat",sans-serif;}
 :root{
     --bgBlack : #111010;
