--- a/Html_and_ CSS_Assignments/Project 1/style.css
+++ b/Html_and_ CSS_Assignments/Project 1/style.css
@@ -15,10 +15,10 @@ body {
   max-width: 1440px;
   margin: 0 auto;
   /* overflow: hidden; */
-  background-color: var(--darkPurple);
+  /* background-color: var(--darkPurple); */
 }
 .container{
-  background-color: var(--white);
+  /* background-color: var(--white); */
 }
 .list {
   list-style: none;
@@ -101,6 +101,14 @@ img[alt="illustration"] {
  position: relative;
  left: 73px;
  overflow-x: hidden;
+}
+button{
+  transition: all 1s ease-in-out;
+}
+button:hover{
+  background-color: transparent;
+  color: var(--purple);
+  border: 1px solid var(--purple);
 }
 
  
