--- a/Practice Work/Flexbox/flexbox.css
+++ b/Practice Work/Flexbox/flexbox.css
@@ -11,7 +11,7 @@ body{
     background-color: #e9a40e;
     border: none;
     height: 160px;
-    width: 200px;
+    flex-basis: 200px;
     color: aliceblue;
     display: flex;
     justify-content: center;
@@ -20,19 +20,19 @@ body{
 }
 /*FLEXBOX*/
 .container{
-    width: 50vw;
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-between;
     gap: 50px;
     flex-wrap: wrap;
     height: 100vh;
-    align-content: space-between;
+    /* align-content: flex-end; */
+    background-color: aqua;
 }
 #item-10{
-    /* flex-grow: 6; */
+    flex-grow: 1;
 }
 #item-1{
-   /* flex-shrink: 3; */
+   flex-shrink: 3;
 }
 
 
